--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,10 +2,9 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-	${LAYERDIR}/recipes-*/*/*.bbappend \
-	${LAYERDIR}/images/*.bb"
+BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "icev2"
-BBFILE_PATTERN_icev2 = "^${LAYERDIR}/"
-BBFILE_PRIORITY_icev2 = "6"
+BBFILE_COLLECTIONS += "meta-icev2"
+BBFILE_PATTERN_meta-icev2 = "^${LAYERDIR}/"
+BBFILE_PRIORITY_meta-icev2 = "8"
+
