--- a/conf/machine/icev2.conf
+++ b/conf/machine/icev2.conf
@@ -1,21 +1,40 @@
 #@TYPE: Machine
-#@NAME: TI ICEv2 machine
+#@NAME: ICEv2 machine
 #@DESCRIPTION: Machine configuration for http://www.ti.com/tool/tmdsice3359 board
+
+PREFERRED_PROVIDER_virtual/xserver ?= "xserver-xorg"
+XSERVER ?= "xserver-xorg \
+           xf86-video-modesetting \
+           "
+
+MACHINE_EXTRA_RRECOMMENDS = " kernel-modules kernel-devicetree"
+
+EXTRA_IMAGEDEPENDS += "u-boot"
 
 DEFAULTTUNE ?= "cortexa8hf-neon"
 include conf/machine/include/tune-cortexa8.inc
 
-IMAGE_FSTYPES += "tar.gz"
+IMAGE_FSTYPES += "tar.bz2 jffs2 wic wic.bmap"
+EXTRA_IMAGECMD_jffs2 = "-lnp "
+WKS_FILE ?= "icev2.wks"
+IMAGE_INSTALL_append = " kernel-devicetree kernel-image-zimage"
+do_image_wic[depends] += "mtools-native:do_populate_sysroot dosfstools-native:do_populate_sysroot"
 
 SERIAL_CONSOLE = "115200 ttyS3"
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-ti-icev2"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
+PREFERRED_VERSION_linux-yocto ?= "4.10%"
 
 KERNEL_IMAGETYPE = "zImage"
 KERNEL_DEVICETREE = "am335x-icev2.dtb"
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
 
+SPL_BINARY = "MLO"
+UBOOT_SUFFIX = "img"
+UBOOT_MACHINE = "am335x_evm_config"
 UBOOT_ENTRYPOINT = "0x80008000"
 UBOOT_LOADADDRESS = "0x80008000"
 
-MACHINE_FEATURES = ""
+MACHINE_FEATURES = "vfat alsa"
+
+IMAGE_BOOT_FILES ?= "u-boot.${UBOOT_SUFFIX} MLO"
