--- a/conf/machine/icev2.conf
+++ b/conf/machine/icev2.conf
@@ -22,8 +22,8 @@ do_image_wic[depends] += "mtools-native:do_populate_sysroot dosfstools-native:do
 
 SERIAL_CONSOLE = "115200 ttyS3"
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.10%"
+PREFERRED_PROVIDER_virtual/kernel ?= "ti-linux"
+PREFERRED_VERSION_linux-yocto ?= "4.9%"
 
 KERNEL_IMAGETYPE = "zImage"
 KERNEL_DEVICETREE = "am335x-icev2.dtb"
